Fixed alignment and made image smaller so everything fits cleanly

--- a/src/styles/MovieDetails.css
+++ b/src/styles/MovieDetails.css
@@ -10,12 +10,14 @@
     flex-direction: row;
     width: 100%;
     justify-content: space-between;
+    margin-bottom: 3%;
 }
 
 .infoDiv {
     display: flex;
     flex-direction: column;
     width: 500px;
+    height: 100%;
 }
 
 .infoDiv > div {
@@ -42,6 +44,7 @@ td {
     width: 50%;
     border: 1px solid black;
     border-collapse: collapse;
+    padding: 1%;
 }
 
 .tableData {
@@ -51,6 +54,9 @@ td {
 .overviewContainer {
     display: flex;
     flex-direction: row;
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 1%
 }
 
 .detailsBody {
